# altair-os

./: .gitignore  Dockerfile  Dockerfile.rcl  README.md  altair_setup.py  compose.yml
src/altair_controllers/: package.xml  setup.cfg  setup.py
src/altair_controllers/altair_controllers/: _dummy_app_controller.py  app_controller.py  dxl_check.py
src/altair_controllers/altair_controllers/modules/: _dummy_app_controller_node.py  app_controller_node.py  dxl_check_node.py
src/altair_controllers/arduino_controller/: CMakeLists.txt  package.xml
src/altair_controllers/arduino_controller/src/: arduino_controller.cpp  arduino_controller_node.cpp
src/altair_controllers/dynamixel_controller/: CMakeLists.txt  package.xml
src/altair_controllers/dynamixel_controller/config/: dxl_init.yaml  offset.yaml  robot.yaml
src/altair_controllers/dynamixel_controller/include/dynamixel_controller/: control_table_item.h  device.h  dynamixel.h  dynamixel_controller.h  dynamixel_monitor.hpp  dynamixel_state.h  robot.h  time_stamp.h
src/altair_controllers/dynamixel_controller/src/: dynamixel.cpp  dynamixel_controller.cpp  node.cpp  robot.cpp
src/altair_cpp_tests/: CMakeLists.txt  package.xml
src/altair_cpp_tests/include/altair_cpp_tests/: custom_msg_test_node.hpp  rclnode_test_node.hpp
src/altair_cpp_tests/src/: custom_msg_test.cpp  rclnode_test.cpp
src/altair_cpp_tests/src/altair_cpp_tests/: custom_msg_test_node.cpp  rclnode_test_node.cpp
src/altair_data/: CMakeLists.txt  core_config.yaml  package.xml  robot_config.yaml  setup.cfg  setup.py
src/altair_data/config/: core_config.yaml  joint_config.yaml  robot_config.yaml
src/altair_data/data/motion_sequencer/: test01.yaml  test02.yaml  test03.yaml
src/altair_data/data/pose_studio/: test01.yaml  test02.yaml  test03.yaml  test04.yaml  test05.yaml  test06.yaml  test07.yaml  test08.yaml  test09.yaml  test10.yaml  test11.yaml  test12.yaml  test13.yaml  test14.yaml  test15.yaml  test16.yaml  test17.yaml
src/altair_data/include/altair_data/: config.hpp  info_data.hpp
src/altair_data/include/arduino_data/: arduino_data.h
src/altair_data/src/: info_data.cpp
src/altair_data/src/altair_data/: config.cpp
src/altair_data/src/arduino_data/: arduino_data.cpp  arduino_data_node.cpp
src/altair_framework/robotis_controller/: CMakeLists.txt
src/altair_framework/robotis_controller/include/robotis_controller/: robotis_controller.h
src/altair_framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
src/altair_interfaces/: CMakeLists.txt  package.xml
src/altair_interfaces/include/altair_interfaces/: app_launcher_node.hpp
src/altair_interfaces/msg/: Inertial.msg  JointPosition.msg  JointSensor.msg  JointTorque.msg  TestMessage.msg
src/altair_interfaces/src/: app_launcher.cpp
src/altair_interfaces/src/altair_interfaces/: app_launcher_node.cpp
src/altair_main/: package.xml  setup.cfg  setup.py
src/altair_main/launch/: _DEBUG_altair_app_launch.py  altair_app_launch.py  custom_msg_test_cpp_launch.py  custom_msg_test_py_launch.py  rclnode_test_cpp_launch.py  rclnode_test_py_launch.py  webots_op3_single_launch.py
src/altair_math/rc_utils/: CMakeLists.txt  package.xml
src/altair_math/rc_utils/include/rc_utils/: angle_estimator.h  conicfit.h  golayfilter.h  kalmanfilter.h  math_vec_mat.h  planefit.h  ros_time.h
src/altair_math/rc_utils/src/: conicfit.cpp  golay.cpp  kalmanfilter.cpp  planefit.cpp
src/altair_math/rc_utils/test/: test_attitude_estimator.cpp  test_conicfit.cpp  test_firfilter.cpp  test_golay.cpp  test_math_util.cpp  test_misc_util.cpp  test_planefit.cpp
src/altair_math/robotis_math/: CMakeLists.txt  package.xml
src/altair_math/robotis_math/include/robotis_math/: minimum_jerk_trajectory.h  minimum_jerk_trajectory_with_via_point.h  preview_control.h  robotis_linear_algebra.h  robotis_math.h
src/altair_math/robotis_math/src/: robotis_linear_algebra.cpp
src/altair_math/rot_conv/: CMakeLists.txt  package.xml
src/altair_math/rot_conv/include/rot_conv/: rot_conv.h
src/altair_math/rot_conv/src/: rot_conv.cpp
src/altair_motion/: CMakeLists.txt  package.xml
src/altair_motion/altair_kicking/: CMakeLists.txt  package.xml
src/altair_motion/altair_walking/: CMakeLists.txt  package.xml
src/altair_py_tests/: package.xml  setup.cfg  setup.py
src/altair_py_tests/altair_py_tests/: custom_msg_test.py  rclnode_test.py
src/altair_simulation/: CMakeLists.txt  package.xml  readme.md
src/altair_simulation/config/: bridge.yaml  joint_position_controller.yaml  param.txt  position_controller.old.yaml  position_controller.yaml  tes.config
src/altair_simulation/launch/: altair.gazebo.launch.py  altair.gazebo.launch.xml  custom.launch  op3.rviz.launch.py  tes.py
src/altair_simulation/models/RoboCup_Ball/: model.sdf
src/altair_simulation/models/RoboCup_Field/materials/scripts/: field.material
src/altair_simulation/models/RoboCup_Field/meshes/: model.dae
src/altair_simulation/models/field_model/: model.config  model.sdf
src/altair_simulation/tests/: tes.txt
src/altair_simulation/urdf/: altair.sdf  robot.sdf  robot.urdf  robotis_op3.gazebo.xacro  robotis_op3.structure.head.xacro  robotis_op3.structure.larm.xacro  robotis_op3.structure.lleg.xacro  robotis_op3.structure.rarm.xacro  robotis_op3.structure.rleg.xacro  robotis_op3.urdf.xacro  robotis_op3.visuals.xacro
src/altair_simulation/worlds/: altair_world.sdf
src/altair_simulations/: package.xml  setup.cfg  setup.py
src/altair_simulations/altair_simulations/: webots_op3_driver.py
src/altair_simulations/resource/: op3_single.urdf
src/altair_simulations/worlds/: op3_single_world.wbt
src/altair_tests/: package.xml  setup.cfg  setup.py
src/altair_vision/: package.xml  setup.cfg  setup.py
web/: app.js  package-lock.json  package.json
web/public/css/: output.css
web/public/js/: navbar_utils.js
web/public/js/motion_sequencer/: button_utils.js  (+3 more)
web/src/js/: config.js  rcl-gateaway.js  rcl-gateway.js
web/views/pages/: index.ejs  motion_sequencer.ejs  pose_studio.ejs  status.ejs
web/views/partials/: head.ejs  navbar.ejs
(+47 files in other folders)
