<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="falahnaufalzaki@mail.ugm.ac.id">Ikaz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_math</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>dynamixel_workbench</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <!-- <depend>dynamixel_sdk</depend> -->



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
